--- a/src/main/resources/templates/agregarUsuario.html
+++ b/src/main/resources/templates/agregarUsuario.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html lang="en" xmlns:th="https://thymeleaf.org">
+
 <!--
 This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
@@ -129,28 +131,32 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <div class="card card-primary">
               <!-- /.card-header -->
               <!-- form start -->
-              <form id="formAgregarUsuario" method="post" action="/usuarios">
+              <form id="formAgregarUsuario" method="post" action="/agregarUsuario">
                 <div class="card-body">
                   <div class="form-group">
-                    <label for="dato1">dato1</label>
-                    <input type="text" name="dato1" class="form-control" id="dato1" placeholder="dato1">
+                    <label for="username" >Username</label><span id="lblUsername"></span>
+                    <input type="text" name="username" class="form-control" id="username" placeholder="Username">
                   </div>
                   <div class="form-group">
-                    <label for="dato2">dato2</label>
-                    <input type="text" name="dato2" class="form-control" id="dato2" placeholder="dato2">
+                    <label for="password">Contraseña</label><span id="lblPassword"></span>
+                    <input type="password" name="password" class="form-control" id="password" placeholder="Contraseña">
                   </div>
                   <div class="form-group">
-                    <label for="dato3">dato3</label>
-                    <input type="text" name="dato3" class="form-control" id="dato3" placeholder="dato3">
+                    <label for="rpassword">Repetir Contraseña</label><span id="lblrPassword"></span>
+                    <input type="password" name="rpassword" class="form-control" id="rpassword" placeholder="Repetir Contraseña">
                   </div>
                   <div class="form-group">
-                    <label for="dato4">dato4</label>
-                    <input type="text" name="dato4" class="form-control" id="dato4" placeholder="dato4">
+                    <label for="email">Email</label><span id="lblEmail"></span>
+                    <input type="text" name="email" class="form-control" id="email" placeholder="Email">
+                  </div>
+                  <div class="form-group">
+                    <label for="phonenumber">Telefono</label><span id="lblPhonenumber"></span>
+                    <input type="text" name="phonenumber" class="form-control" id="phonenumber" placeholder="Telefono">
                   </div>
                 </div>
                 <!-- /.card-body -->
                 <div class="card-footer">
-                  <button type="submit" class="btn btn-primary">Agregar Usuario</button>
+                  <button type="submit" class="btn btn-primary" id="btnSubmit">Agregar Usuario</button>
                 </div>
               </form>
             </div>
@@ -184,6 +190,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
 </div>
 <!-- ./wrapper -->
 
+<!-- Our Scripts MY EVENTS APP-->
+<script src="../../jsMyEventsApp/ValidationAddUser.js"></script>
 <!-- REQUIRED SCRIPTS -->
 
 <!-- jQuery -->
