--- a/src/main/resources/templates/editarUsuario.html
+++ b/src/main/resources/templates/editarUsuario.html
@@ -17,6 +17,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="dist/css/adminlte.min.css">
+
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
@@ -135,24 +136,50 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <div class="card-body">
                   <div class="form-group">
                     <label for="userid">ID</label>
-                    <input type="text" name="userid" class="form-control" id="userid" placeholder="userid" th:value="${usuario.getUserID()}"/>
+                    <input type="number" name="userid" class="form-control" id="userid" placeholder="userid" th:value="${usuario.getUserID()}" readonly/>
                   </div>
                   <div class="form-group">
-                    <label for="username">Username</label>
+                    <label for="username">Username</label><span id="lblUsername"></span>
                     <input type="text" name="username" class="form-control" id="username" placeholder="username" th:value="${usuario.getUsername()}"/>
                   </div>
                   <div class="form-group">
-                    <label for="password">Contraseña</label>
-                    <input type="password" name="password" class="form-control" id="password" placeholder="password"/>
+                    <label for="password">Contraseña</label><span id="lblPassword"></span>
+                    <input type="password" name="password" class="form-control" id="password" placeholder="password" th:value="${usuario.getPassword()}"/>
                   </div>
                   <div class="form-group">
-                    <label for="email">Email</label>
+                    <label for="email">Email</label><span id="lblEmail"></span>
                     <input type="text" name="email" class="form-control" id="email" placeholder="email" th:value="${usuario.getEmail()}"/>
+                  </div>
+                  <div class="form-group">
+                    <label for="phonenumber">Telefono</label><span id="lblPhonenumber"></span>
+                    <input type="text" name="phonenumber" class="form-control" id="phonenumber" placeholder="phonenumber" th:value="${usuario.getPhonenumber()}"/>
+                  </div>
+
+                  <div class="form-group" th:if="${usuario.getEnabled() == true}">
+                    <label for="enabled">Acesso</label><br><hr>
+                    Si<input type="radio" name="enabled" class="form-control" value="true" id="enabledTrue" checked/><hr>
+                    No<input type="radio" name="enabled" class="form-control" value="false" id="enabledFalse"/><hr>
+                  </div>
+                  <div class="form-group" th:unless="${usuario.getEnabled() == true}">
+                    <label for="enabled">Acesso</label><br><hr>
+                    Si<input type="radio" name="enabled" class="form-control" value="true" id="enabledTrue"/><hr>
+                    No<input type="radio" name="enabled" class="form-control" value="false" id="enabledFalse" checked/><hr>
+                  </div>
+
+                  <div class="form-group" th:if="${usuario.getCmsAdmin() == true}">
+                    <label for="cmsadmin">Admin</label><br><hr>
+                    Si<input type="radio" name="cmsadmin" class="form-control" value="true" id="cmsadminTrue" checked/><hr>
+                    No<input type="radio" name="cmsadmin" class="form-control" value="false" id="cmsadminFalse"/><hr>
+                  </div>
+                  <div class="form-group" th:unless="${usuario.getCmsAdmin() == true}">
+                    <label for="cmsadmin">Admin</label><br><hr>
+                    Si<input type="radio" name="cmsadmin" class="form-control" value="true" id="cmsadminTrue"/><hr>
+                    No<input type="radio" name="cmsadmin" class="form-control" value="false" id="cmsadminFalse" checked/><hr>
                   </div>
                 </div>
                 <!-- /.card-body -->
                 <div class="card-footer">
-                  <button type="submit" class="btn btn-primary">Editar Usuario</button>
+                  <button type="submit" class="btn btn-primary" id="btnSubmit">Editar Usuario</button>
                 </div>
               </form>
             </div>
@@ -187,7 +214,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <!-- ./wrapper -->
 
 <!-- REQUIRED SCRIPTS -->
-
+<!-- Our Scripts MY EVENTS APP-->
+<script src="../../jsMyEventsApp/ValidationEditUser.js"></script>
 <!-- jQuery -->
 <script src="../../plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
