--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,9 +49,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="/" class="brand-link">
-      <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">MyEvents</span>
+    <a href="/menu" class="brand-link">
+      <img src="img/myeventsapp_logo.png" alt="MyEvents Logo" style="opacity: .8;">
     </a>
 
     <!-- Sidebar -->
@@ -130,10 +129,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <footer class="main-footer">
     <!-- To the right -->
     <div class="float-right d-none d-sm-inline">
-      MyEvents
+      MyEventsApp
     </div>
     <!-- Default to the left -->
-    <strong>Copyright &copy; 2021 <a href="#">admin.MyEvents.com</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2021 <a href="#">admin.MyEventsApp.com</a>.</strong> All rights reserved.
   </footer>
 </div>
 <!-- ./wrapper -->
