--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -49,9 +49,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="/" class="brand-link">
-      <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">App Eventos</span>
+    <a href="/menu" class="brand-link">
+      <img src="img/myeventsapp_logo.png" alt="MyEvents Logo" style="opacity: .8;">
     </a>
 
     <!-- Sidebar -->
@@ -166,10 +165,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <footer class="main-footer">
     <!-- To the right -->
     <div class="float-right d-none d-sm-inline">
-      App Eventos
+      MyEventsApp
     </div>
     <!-- Default to the left -->
-    <strong>Copyright &copy; 2021 <a href="#">adminEventos.com</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2021 <a href="#">admin.MyEventsApp.com</a>.</strong> All rights reserved.
   </footer>
 </div>
 <!-- ./wrapper -->
@@ -188,48 +187,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <!-- AdminLTE for demo purposes -->
 <script src="../../dist/js/demo.js"></script>
 <!-- Page specific script -->
-<script>
-$(function () {
-  $.validator.setDefaults({
-    submitHandler: function () {
-      alert( "Login" );
-    }
-  });
-  $('#quickForm').validate({
-    rules: {
-    	user: {
-        required: true,
-        user: true,
-      },
-      password: {
-        required: true,
-        minlength: 5
-      },
-    },
-    messages: {
-    	user: {
-        required: "¡Porfavor, introduce un usuario!",
-        user: "¡Porfavor, introduce un usuario valido!"
-      },
-      password: {
-        required: "¡Porfavor, introduce una contraseña!",
-        minlength: "¡Porfavor, introduce una contraseña de 5 caracteres minimo!"
-      },
-    },
-    errorElement: 'span',
-    errorPlacement: function (error, element) {
-      error.addClass('invalid-feedback');
-      element.closest('.form-group').append(error);
-    },
-    highlight: function (element, errorClass, validClass) {
-      $(element).addClass('is-invalid');
-    },
-    unhighlight: function (element, errorClass, validClass) {
-      $(element).removeClass('is-invalid');
-    }
-  });
-});
-</script>
 </body>
 </html>
 
