--- a/src/main/resources/templates/eventos.html
+++ b/src/main/resources/templates/eventos.html
@@ -3,7 +3,7 @@
 This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
-<html lang="en">
+<html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -110,10 +110,20 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- Content Header (Page header) -->
     <div class="content-header">
       <div class="container-fluid">
+
+        <div class="card card-primary card-outline" th:if="${msgError.getMessageCode() == 0}">
+          <div class="card-body">
+            <h5 class="card-title">ℹ️ MyEvents Admin: </h5>
+            <p class="card-text">
+              Mensaje: <span th:text="${msgError.getMessage()}"></span>
+            </p>		
+          </div>
+        </div>
+
         <div class="row mb-2">
           <div class="col-sm-6">
             <h1 class="m-0">Eventos</h1>
-            <form method="post" action="/agregarEvento">
+            <form method="get" action="/agregarEvento">
         		<input type="submit" name="botonAgregar" value="Agregar Evento">
         	</form>
           </div><!-- /.col -->
