Update: UI mejorada

--- a/src/main/resources/templates/eventos.html
+++ b/src/main/resources/templates/eventos.html
@@ -253,7 +253,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       "ordering": true,
       "info": true,
       "autoWidth": false,
-      "responsive": true,
+      "responsive": false,
       "oLanguage": {
         "oPaginate": {
         "sFirst": "Primera Pagina",
