Update: UI Mejorada

--- a/src/main/resources/templates/eventos.html
+++ b/src/main/resources/templates/eventos.html
@@ -171,7 +171,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <td th:text="${evento.getVideomeeting()}"></td>
                     <td th:text="${evento.getAvailable()}"></td>
                     <td>
-                      <form method="post" action=/editarEvento>
+                      <form method="get" action=/editarEvento th:action="@{/editarEvento?eventid=${evento.getEventID()}}">
                         <input type="hidden" name="eventid" th:value="${evento.getEventID()}">
                         <input type="submit" name="botonModificar" value="Editar">
                       </form>
