--- a/src/main/resources/templates/Legasyindex.html
+++ b/src/main/resources/templates/Legasyindex.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://thymeleaf.org">
-
 <!--
 This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
@@ -29,13 +27,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="/menu" class="nav-link">Inicio</a>
+        <a href="/" class="nav-link">Inicio</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="/usuarios" class="nav-link">Usuarios</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="/eventos" class="nav-link">Eventos</a>
+        <a href="/login" class="nav-link">Login</a>
       </li>
     </ul>
 
@@ -75,22 +70,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="/menu" class="nav-link">
+                <a href="/" class="nav-link">
                   <i class="fas fa-home nav-icon"></i>
                   <p>Inicio</p>
                 </a>
-                <a href="/usuarios" class="nav-link">
-                  <i class="nav-icon fas fa-user-friends"></i>
-                  <p>Usuarios</p>
-                </a>
-                <a href="/eventos" class="nav-link">
-                  <i class="nav-icon fas fa-calendar-week"></i>
-                  <p>Eventos</p>
-                </a>
-                <a href="/cerrarSesion" class="nav-link">
-                  <i class="nav-icon fas fa-user-alt-slash"></i>
-                  <p>Cerrar Sesion</p>
-                </a>
+                <a href="/login" class="nav-link">
+	              <i class="nav-icon fas fa-user"></i>
+	              <p>Login</p>
+            	</a>
               </li>
             </ul>
           </li>
@@ -124,44 +111,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <div class="card card-primary card-outline">
               <div class="card-body">
                 <h5 class="card-title">MyEvents Admin</h5>
+
                 <p class="card-text">
                   En esta app podrás administrar los datos de los usuarios y sus eventos
                 </p>		
               </div>
             </div><!-- /.card -->
-
-			<div class="small-box bg-warning">
-              <div class="inner">
-                <h3 th:text="${estadisticasUsuario}"></h3>
-
-                <p>Usuarios Registrados</p>
-              </div>
-              <div class="icon">
-                <i class="fas fa-user-plus"></i>
-              </div>
-              <a href="/usuarios" class="small-box-footer">
-                Ir a Usuarios <i class="fas fa-arrow-circle-right"></i>
-              </a>
-            </div>
-          </div>
-          
-          <div class="small-box bg-info">
-              <div class="inner">
-                <h3 th:text="${estadisticasEvento}"></h3>
-
-                <p>Eventos Creados</p>
-              </div>
-              <div class="icon">
-                <i class="fas fa-calendar-week"></i>
-              </div>
-              <a href="/eventos" class="small-box-footer">
-                Ir a eventos <i class="fas fa-arrow-circle-right"></i>
-              </a>
-            </div>
-          </div>
-
-
-
           </div>
           <!-- /.col-md-6 -->
       </div><!-- /.container-fluid -->
