--- a/src/main/resources/templates/Legasylogin.html
+++ b/src/main/resources/templates/Legasylogin.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://thymeleaf.org">
-
 <!--
 This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
@@ -9,7 +7,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MyEvents - Usuarios</title>
+  <title>AppEventos</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -29,13 +27,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="/menu" class="nav-link">Inicio</a>
+        <a href="/" class="nav-link">Inicio</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="/usuarios" class="nav-link">Usuarios</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="/eventos" class="nav-link">Eventos</a>
+        <a href="/login" class="nav-link">Login</a>
       </li>
     </ul>
 
@@ -75,22 +70,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="/menu" class="nav-link">
+                <a href="/" class="nav-link">
                   <i class="fas fa-home nav-icon"></i>
                   <p>Inicio</p>
                 </a>
-                <a href="/usuarios" class="nav-link">
-                  <i class="nav-icon fas fa-user-friends"></i>
-                  <p>Usuarios</p>
-                </a>
-                <a href="/eventos" class="nav-link">
-                  <i class="nav-icon fas fa-calendar-week"></i>
-                  <p>Eventos</p>
-                </a>
-                <a href="/cerrarSesion" class="nav-link">
-                  <i class="nav-icon fas fa-user-alt-slash"></i>
-                  <p>Cerrar Sesion</p>
-                </a>
+                <a href="/login" class="nav-link">
+	              <i class="nav-icon fas fa-user"></i>
+	              <p>Login</p>
+            	</a>
               </li>
             </ul>
           </li>
@@ -121,49 +108,53 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <div class="content">
       <div class="container-fluid">
 
-            <div class="card card-primary card-outline">
-              <div class="card-body">
-                <h5 class="card-title">MyEvents Admin</h5>
-                <p class="card-text">
-                  En esta app podrás administrar los datos de los usuarios y sus eventos
-                </p>		
+                <section class="content">
+      <div class="container-fluid">
+        <div class="row">
+          <!-- left column -->
+          <div class="col-md-12">
+            <!-- jquery validation -->
+            <div class="card card-primary">
+              <div class="card-header">
+                <h3 class="card-title">Login</h3>
               </div>
-            </div><!-- /.card -->
-
-			<div class="small-box bg-warning">
-              <div class="inner">
-                <h3 th:text="${estadisticasUsuario}"></h3>
-
-                <p>Usuarios Registrados</p>
-              </div>
-              <div class="icon">
-                <i class="fas fa-user-plus"></i>
-              </div>
-              <a href="/usuarios" class="small-box-footer">
-                Ir a Usuarios <i class="fas fa-arrow-circle-right"></i>
-              </a>
+              <!-- /.card-header -->
+              <!-- form start -->
+              <form id="login" method="post" action="/resolveLogin">
+                <div class="card-body">
+                  <div class="form-group">
+                    <label for="user">Usuario</label>
+                    <input type="text" name="user" class="form-control" id="user" placeholder="Usuario">
+                  </div>
+                  <div class="form-group">
+                    <label for="password">Contraseña</label>
+                    <input type="password" name="password" class="form-control" id="password" placeholder="Contraseña">
+                  </div>
+                  <div class="form-group mb-0">
+                    <div class="custom-control custom-checkbox">
+                      <input type="checkbox" name="guardarSesion" class="custom-control-input" id="guardarSesion">
+                      <label class="custom-control-label" for="guardarSesion">Guardar Sesion</label>
+                    </div>
+                  </div>
+                </div>
+                <!-- /.card-body -->
+                <div class="card-footer">
+                  <button type="submit" class="btn btn-primary">Entrar</button>
+                </div>
+              </form>
             </div>
-          </div>
-          
-          <div class="small-box bg-info">
-              <div class="inner">
-                <h3 th:text="${estadisticasEvento}"></h3>
-
-                <p>Eventos Creados</p>
-              </div>
-              <div class="icon">
-                <i class="fas fa-calendar-week"></i>
-              </div>
-              <a href="/eventos" class="small-box-footer">
-                Ir a eventos <i class="fas fa-arrow-circle-right"></i>
-              </a>
+            <!-- /.card -->
             </div>
+          <!--/.col (left) -->
+          <!-- right column -->
+          <div class="col-md-6">
+
           </div>
-
-
-
-          </div>
-          <!-- /.col-md-6 -->
+          <!--/.col (right) -->
+        </div>
+        <!-- /.row -->
+      </div><!-- /.container-fluid -->
+    </section>
       </div><!-- /.container-fluid -->
     </div>
     <!-- /.content -->
@@ -185,10 +176,17 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <!-- REQUIRED SCRIPTS -->
 
 <!-- jQuery -->
-<script src="plugins/jquery/jquery.min.js"></script>
+<script src="../../plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
-<script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- jquery-validation -->
+<script src="../../plugins/jquery-validation/jquery.validate.min.js"></script>
+<script src="../../plugins/jquery-validation/additional-methods.min.js"></script>
 <!-- AdminLTE App -->
-<script src="/dist/js/adminlte.min.js"></script>
+<script src="../../dist/js/adminlte.min.js"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="../../dist/js/demo.js"></script>
+<!-- Page specific script -->
 </body>
 </html>
+
