--- a/src/main/resources/templates/editarUsuario.html
+++ b/src/main/resources/templates/editarUsuario.html
@@ -143,8 +143,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   </div>
                   <div class="form-group">
                     <label for="password">Contraseña</label><span id="lblPassword"></span>
-                    <input type="password" name="password" class="form-control" id="password" placeholder="password" th:value="${usuario.getPassword()}"/>
+                    <input type="password" name="password" class="form-control" id="password" placeholder="Contraseña" th:value="${usuario.getPassword()}"/>
                   </div>
+                  <input type="text" name="oldpassword" class="form-control" id="oldpassword" th:value="${usuario.getPassword()}" hidden/>
                   <div class="form-group">
                     <label for="email">Email</label><span id="lblEmail"></span>
                     <input type="text" name="email" class="form-control" id="email" placeholder="email" th:value="${usuario.getEmail()}"/>
