Update: Mejoras Usabilidad

--- a/src/main/resources/templates/noAcceso.html
+++ b/src/main/resources/templates/noAcceso.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-	<title>MyEvents - Error</title>
-	<style>
+	<title>MyEvents - No Acceso</title>
+    <style>
         body {
             background-color:gray;
         }
@@ -9,8 +9,7 @@
 </head>
 <body>
     <img src="img/myeventsapp_logo.png" alt="MyEvents Logo" style="opacity: .8;">
-	<h1>ERROR: ❌¡RECURSO NO ENCONTRADO!❌</h1>
-	<h5><a href="/menu">Volver al inicio</a></h5><!--Comprobar si esta logeado-->
+	<h1>🚫¡No tienes Acceso!🚫</h1>
 	<h5><a href="/cerrarSesion">Cerrar Sesion</a></h5><!--Comprobar si esta logeado-->
 </body>
 </html>
