--- a/src/main/resources/templates/eventos.html
+++ b/src/main/resources/templates/eventos.html
@@ -154,7 +154,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <th>Coordenadas</th>
                     <th>Enlace</th>
                     <th>Disponible</th>
-                    <th>Acciones</th>
+                    <th>Editar</th>
+                    <th>Eliminar</th>
                   </tr>
                   </thead>
                   <tbody>
@@ -165,7 +166,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <td th:text="${evento.getStartTime()}"></td>
                     <td th:text="${evento.getEndTime()}"></td>
                     <td th:text="${evento.getUserOwner().getUsername()}"></td>
-                    <td th:text="${evento.getUserSummoner().getUsername()}"></td>
+                    <td th:if="${evento.getUserSummoner() == null}" >Sin Citador</td>
+                    <td th:unless="${evento.getUserSummoner() == null}" th:text="${evento.getUserSummoner().getUsername()}"></td>
                     <td th:text="${evento.getEventPreference()}"></td>
                     <td th:text="${evento.getCoordinates()}"></td>
                     <td th:text="${evento.getVideomeeting()}"></td>
@@ -175,6 +177,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <input type="hidden" name="eventid" th:value="${evento.getEventID()}">
                         <input type="submit" name="botonModificar" value="Editar">
                       </form>
+                    </td>
+                    <td>
                       <form method="post" action=/eliminarEvento>
                         <input type="hidden" name="eventid" th:value="${evento.getEventID()}">
                         <input type="submit" name="botonEliminar" value="Eliminar">
@@ -195,7 +199,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <th>Coordenadas</th>
                     <th>Enlace</th>
                     <th>Disponible</th>
-                    <th>Acciones</th>
+                    <th>Editar</th>
+                    <th>Eliminar</th>
                   </tr>
                   </tfoot>
                 </table>		
