--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,129 +5,132 @@
 This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>MyEvents - Inicio</title>
 
   <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="dist/css/adminlte.min.css">
 </head>
+
 <body class="hold-transition sidebar-mini">
-<div class="wrapper">
+  <div class="wrapper">
 
-  <!-- Navbar -->
-  <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-    <!-- Left navbar links -->
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="/menu" class="nav-link">Inicio</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="/usuarios" class="nav-link">Usuarios</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="/eventos" class="nav-link">Eventos</a>
-      </li>
-    </ul>
+    <!-- Navbar -->
+    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+      <!-- Left navbar links -->
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+          <a href="/menu" class="nav-link">Inicio</a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+          <a href="/usuarios" class="nav-link">Usuarios</a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+          <a href="/eventos" class="nav-link">Eventos</a>
+        </li>
+      </ul>
 
-    <!-- Right navbar links -->
-    <ul class="navbar-nav ml-auto">
-      <!-- FullScreen -->
-      <li class="nav-item">
-        <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-          <i class="fas fa-expand-arrows-alt"></i>
-        </a>
-      </li>
-    </ul>
-  </nav>
-  <!-- /.navbar -->
+      <!-- Right navbar links -->
+      <ul class="navbar-nav ml-auto">
+        <!-- FullScreen -->
+        <li class="nav-item">
+          <a class="nav-link" data-widget="fullscreen" href="#" role="button">
+            <i class="fas fa-expand-arrows-alt"></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- /.navbar -->
 
-  <!-- Main Sidebar Container -->
-  <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <!-- Brand Logo -->
-    <a href="/menu" class="brand-link">
-      <img src="img/myeventsapp_logo.png" alt="MyEvents Logo" style="opacity: .8;">
-    </a>
+    <!-- Main Sidebar Container -->
+    <aside class="main-sidebar sidebar-dark-primary elevation-4">
+      <!-- Brand Logo -->
+      <a href="/menu" class="brand-link">
+        <img src="img/myeventsapp_logo.png" alt="MyEvents Logo" style="opacity: .8;">
+      </a>
 
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <!-- Sidebar Menu -->
-      <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-          <!-- Add icons to the links using the .nav-icon class
+      <!-- Sidebar -->
+      <div class="sidebar">
+        <!-- Sidebar Menu -->
+        <nav class="mt-2">
+          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+            <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          <li class="nav-item menu-open">
-            <a href="#" class="nav-link active">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
-              <p>
-                Funcionalidades
-                <i class="right fas fa-angle-left"></i>
+            <li class="nav-item menu-open">
+              <a href="#" class="nav-link active">
+                <i class="nav-icon fas fa-tachometer-alt"></i>
+                <p>
+                  Funcionalidades
+                  <i class="right fas fa-angle-left"></i>
+                </p>
+              </a>
+              <ul class="nav nav-treeview">
+                <li class="nav-item">
+                  <a href="/menu" class="nav-link">
+                    <i class="fas fa-home nav-icon"></i>
+                    <p>Inicio</p>
+                  </a>
+                  <a href="/usuarios" class="nav-link">
+                    <i class="nav-icon fas fa-user-friends"></i>
+                    <p>Usuarios</p>
+                  </a>
+                  <a href="/eventos" class="nav-link">
+                    <i class="nav-icon fas fa-calendar-week"></i>
+                    <p>Eventos</p>
+                  </a>
+                  <a href="/cerrarSesion" class="nav-link">
+                    <i class="nav-icon fas fa-user-alt-slash"></i>
+                    <p>Cerrar Sesion</p>
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+        <!-- /.sidebar-menu -->
+      </div>
+      <!-- /.sidebar -->
+    </aside>
+
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+      <!-- Content Header (Page header) -->
+      <div class="content-header">
+        <div class="container-fluid">
+          <div class="row mb-2">
+            <div class="col-sm-6">
+              <h1 class="m-0">Inicio</h1>
+            </div><!-- /.col -->
+            <div class="col-sm-6">
+            </div><!-- /.col -->
+          </div><!-- /.row -->
+        </div><!-- /.container-fluid -->
+      </div>
+      <!-- /.content-header -->
+
+      <!-- Main content -->
+      <div class="content">
+        <div class="container-fluid">
+
+          <div class="card card-primary card-outline">
+            <div class="card-body">
+              <h5 class="card-title">MyEvents Admin</h5>
+              <p class="card-text">
+                En esta app podrás administrar los datos de los usuarios y sus eventos
               </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="/menu" class="nav-link">
-                  <i class="fas fa-home nav-icon"></i>
-                  <p>Inicio</p>
-                </a>
-                <a href="/usuarios" class="nav-link">
-                  <i class="nav-icon fas fa-user-friends"></i>
-                  <p>Usuarios</p>
-                </a>
-                <a href="/eventos" class="nav-link">
-                  <i class="nav-icon fas fa-calendar-week"></i>
-                  <p>Eventos</p>
-                </a>
-                <a href="/cerrarSesion" class="nav-link">
-                  <i class="nav-icon fas fa-user-alt-slash"></i>
-                  <p>Cerrar Sesion</p>
-                </a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-      <!-- /.sidebar-menu -->
-    </div>
-    <!-- /.sidebar -->
-  </aside>
-
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <div class="content-header">
-      <div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-6">
-            <h1 class="m-0">Inicio</h1>
-          </div><!-- /.col -->
-          <div class="col-sm-6">
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /.container-fluid -->
-    </div>
-    <!-- /.content-header -->
-
-    <!-- Main content -->
-    <div class="content">
-      <div class="container-fluid">
-
-            <div class="card card-primary card-outline">
-              <div class="card-body">
-                <h5 class="card-title">MyEvents Admin</h5>
-                <p class="card-text">
-                  En esta app podrás administrar los datos de los usuarios y sus eventos
-                </p>		
-              </div>
-            </div><!-- /.card -->
+            </div>
+          </div><!-- /.card -->
 
           <section class="content">
             <div class="container-fluid">
@@ -137,7 +140,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   <div class="small-box bg-warning">
                     <div class="inner">
                       <h3 th:text="${estadisticasUsuario}"></h3>
-      
+
                       <p>Usuarios Registrados</p>
                     </div>
                     <div class="icon">
@@ -153,7 +156,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   <div class="small-box bg-info">
                     <div class="inner">
                       <h3 th:text="${estadisticasEvento}"></h3>
-      
+
                       <p>Eventos Creados</p>
                     </div>
                     <div class="icon">
@@ -164,48 +167,50 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     </a>
                   </div>
                 </div>
-                </div>
-                <!-- ./col -->
-                </div>
               </div>
+              <!-- ./col -->
             </div>
-          </section>
+        </div>
+      </div>
+      </section>
 
-          <section class="content">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-md-12">
-                  <!-- AREA CHART -->
-                  <div class="card card-primary">
-                    <div class="card-header">
-                      <h3 class="card-title">Eventos que terminan este Mes</h3>
-      
-                      <div class="card-tools">
-                        <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                          <i class="fas fa-minus"></i>
-                        </button>
-                      </div>
-                    </div>
-                    <div class="card-body">
-                      <div class="chart">
-                        <canvas id="areaChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
-                      </div>
-                    </div>
-                    <!-- /.card-body -->
+      <section class="content">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-12">
+              <!-- AREA CHART -->
+              <div class="card card-primary">
+                <div class="card-header">
+                  <h3 class="card-title">Eventos que terminan este Mes</h3>
+
+                  <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                      <i class="fas fa-minus"></i>
+                    </button>
                   </div>
-                  <!-- /.card -->
                 </div>
-                <!-- /.col (RIGHT) -->
+                <div class="card-body">
+                  <div class="chart">
+                    <canvas id="areaChart"
+                      style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
+                    <h4 id="infoChart">📅¡No hay eventos disponibles!📅</h4>
+                  </div>
+                </div>
+                <!-- /.card-body -->
               </div>
-              <!-- /.row -->
-            </div><!-- /.container-fluid -->
-          </section>
-
+              <!-- /.card -->
+            </div>
+            <!-- /.col (RIGHT) -->
           </div>
-          <!-- /.col-md-6 -->
-      </div><!-- /.container-fluid -->
+          <!-- /.row -->
+        </div><!-- /.container-fluid -->
+      </section>
+
     </div>
-    <!-- /.content -->
+    <!-- /.col-md-6 -->
+  </div><!-- /.container-fluid -->
+  </div>
+  <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
 
@@ -218,89 +223,94 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- Default to the left -->
     <strong>Copyright &copy; 2021 <a href="#">admin.MyEventsApp.com</a>.</strong> All rights reserved.
   </footer>
-</div>
-<!-- ./wrapper -->
+  </div>
+  <!-- ./wrapper -->
 
-<!-- REQUIRED SCRIPTS -->
+  <!-- REQUIRED SCRIPTS -->
 
-<!-- jQuery -->
-<script src="plugins/jquery/jquery.min.js"></script>
-<!-- Bootstrap 4 -->
-<script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-<!-- AdminLTE App -->
-<script src="/dist/js/adminlte.min.js"></script>
-<script src="../../plugins/chart.js/Chart.min.js"></script>
+  <!-- jQuery -->
+  <script src="plugins/jquery/jquery.min.js"></script>
+  <!-- Bootstrap 4 -->
+  <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- AdminLTE App -->
+  <script src="/dist/js/adminlte.min.js"></script>
+  <script src="../../plugins/chart.js/Chart.min.js"></script>
 
-<script th:inline="javascript">
-  /*<![CDATA[*/
-  var data = [[${estadisticasEventosHoy}]];
-  /*]]>*/
-  var dataX = [];
-  var dataY = [];
+  <script th:inline="javascript">
+    /*<![CDATA[*/
+    var data = [[${estadisticasEventosHoy}]];
+    /*]]>*/
 
-  var date = new Date();
+    var dataX = [];
+    var dataY = [];
+    let noEmpty = false;
 
-  for(key in data){
-    dataX.push(key);
-    dataY.push(data[key]);
-  }
-  $(function () {
-    /* ChartJS
-     * -------
-     * Here we will create a few charts using ChartJS
-     */
+    var date = new Date();
 
-    //--------------
-    //- AREA CHART -
-    //--------------
-
-    // Get context with jQuery - using jQuery's .get() method.
-    var areaChartCanvas = $('#areaChart').get(0).getContext('2d')
-
-    var areaChartData = {
-      labels  : dataX,
-      datasets: [
-        {
-          backgroundColor     : 'rgba(60,141,188,0.9)',
-          borderColor         : 'rgba(60,141,188,0.8)',
-          pointRadius          : true,
-          pointColor          : '#3b8bba',
-          pointStrokeColor    : 'rgba(60,141,188,1)',
-          pointHighlightFill  : '#fff',
-          pointHighlightStroke: 'rgba(60,141,188,1)',
-          data                : dataY
-        },
-      ]
-    }
-
-    var areaChartOptions = {
-      maintainAspectRatio : false,
-      responsive : true,
-      legend: {
-        display: false
-      },
-      scales: {
-        xAxes: [{
-          gridLines : {
-            display : false,
-          }
-        }],
-        yAxes: [{
-          gridLines : {
-            display : false,
-          }
-        }]
+    for (key in data) {
+      if (data[key] == 0) {
+        document.getElementById("areaChart").style.display = "none";
+        document.getElementById("infoChart").style.display = "block";
+        noEmpty = false;
+      } else {
+        document.getElementById("areaChart").style.display = "block";
+        document.getElementById("infoChart").style.display = "none";
+        noEmpty = true;
       }
     }
 
-    // This will get the first returned node in the jQuery collection.
-    new Chart(areaChartCanvas, {
-      type: 'line',
-      data: areaChartData,
-      options: areaChartOptions
-    })
-  });
-</script>
+    for (key in data) {
+      dataX.push(key);
+      dataY.push(data[key]);
+    }
+    $(function () {
+      if (noEmpty) {
+        var areaChartCanvas = $('#areaChart').get(0).getContext('2d')
+
+        var areaChartData = {
+          labels: dataX,
+          datasets: [{
+            backgroundColor: 'rgba(60,141,188,0.9)',
+            borderColor: 'rgba(60,141,188,0.8)',
+            pointRadius: true,
+            pointColor: '#3b8bba',
+            pointStrokeColor: 'rgba(60,141,188,1)',
+            pointHighlightFill: '#fff',
+            pointHighlightStroke: 'rgba(60,141,188,1)',
+            data: dataY
+          }, ]
+        }
+
+        var areaChartOptions = {
+          maintainAspectRatio: false,
+          responsive: true,
+          legend: {
+            display: false
+          },
+          scales: {
+            xAxes: [{
+              gridLines: {
+                display: false,
+              }
+            }],
+            yAxes: [{
+              gridLines: {
+                display: false,
+              }
+            }]
+          }
+        }
+
+        // This will get the first returned node in the jQuery collection.
+        new Chart(areaChartCanvas, {
+          type: 'line',
+          data: areaChartData,
+          options: areaChartOptions
+        });
+      }
+    });
+  </script>
 
 </body>
+
 </html>
