--- a/src/main/resources/templates/soporte.html
+++ b/src/main/resources/templates/soporte.html
@@ -34,9 +34,7 @@
           </div>
         </div>
         <div class="input-group mb-3">
-            <textarea id="w3review" name="w3review" rows="4" cols="50" placeholder="Escribanos tu problema">
-               
-            </textarea>
+            <textarea id="w3review" name="w3review" rows="4" cols="50" placeholder="Describenos tu problema 📝"></textarea>
         </div>
           <!-- /.col -->
           <div class="col-4">
