--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -187,7 +187,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <th>Eliminar</th>
                   </tr>
                   </tfoot>
-                </table>		
+                </table>	
               </div>
             </div><!-- /.card -->
           </div>
@@ -238,11 +238,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
     $('#tablaUsuarios').DataTable({
       "paging": true,
       "lengthChange": false,
-      "searching": false,
+      "searching": true,
       "ordering": true,
       "info": true,
-      "autoWidth": false,
-      "responsive": false,
+      "autoWidth": true,
+      "responsive": true,
       "oLanguage": {
         "oPaginate": {
         "sFirst": "Primera Pagina",
